jenkins-specification/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: jenkins
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    name: web
    nodePort: 30080
  - port: 50000
    targetPort: 50000
    name: agent
    nodePort: 30050
  selector:
    app: jenkins
